--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -151,7 +151,7 @@
                                                     <rect key="frame" x="8" y="8" width="156" height="127"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1CA-Qd-04y">
-                                                    <rect key="frame" x="67.5" y="135" width="37.5" height="18"/>
+                                                    <rect key="frame" x="8" y="135" width="157" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -159,20 +159,14 @@
                                             </subviews>
                                         </view>
                                         <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="1CA-Qd-04y" secondAttribute="bottom" constant="-4" id="0UM-6L-RUg"/>
+                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="centerX" secondItem="euV-F6-8tr" secondAttribute="centerX" id="AwJ-MH-kyQ"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="euV-F6-8tr" secondAttribute="trailing" id="DXr-ox-oaM"/>
-                                            <constraint firstAttribute="bottom" secondItem="1CA-Qd-04y" secondAttribute="bottom" constant="4" id="ESC-3J-zh1"/>
-                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="centerX" secondItem="uFz-Lq-yag" secondAttribute="centerX" id="F5E-af-kTa"/>
                                             <constraint firstItem="euV-F6-8tr" firstAttribute="leading" secondItem="uFz-Lq-yag" secondAttribute="leadingMargin" id="Ggj-3f-Lzg"/>
-                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="leading" secondItem="uFz-Lq-yag" secondAttribute="leadingMargin" constant="60" id="ROk-iC-ALB"/>
                                             <constraint firstItem="euV-F6-8tr" firstAttribute="top" secondItem="uFz-Lq-yag" secondAttribute="topMargin" id="gpF-yf-Wu4"/>
-                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="top" secondItem="euV-F6-8tr" secondAttribute="bottom" constant="5" id="jHQ-RW-ASW"/>
-                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="top" secondItem="euV-F6-8tr" secondAttribute="bottom" id="tYe-PQ-eTl"/>
+                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="top" secondItem="euV-F6-8tr" secondAttribute="bottom" id="qSF-99-FJR"/>
+                                            <constraint firstItem="1CA-Qd-04y" firstAttribute="leading" secondItem="euV-F6-8tr" secondAttribute="leading" id="sXi-Xm-khW"/>
                                         </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="ROk-iC-ALB"/>
-                                            </mask>
-                                        </variation>
                                         <connections>
                                             <outlet property="myImageViewCell" destination="euV-F6-8tr" id="C4h-bJ-hwR"/>
                                             <outlet property="myLabelViewCell" destination="1CA-Qd-04y" id="jEj-Ec-uKr"/>
@@ -243,7 +237,7 @@
                                                     <rect key="frame" x="8" y="8" width="156" height="122"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofN-Q6-BXm">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofN-Q6-BXm">
                                                     <rect key="frame" x="8" y="130" width="156" height="18"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -301,10 +295,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wPz-qz-UAt">
-                                <rect key="frame" x="0.0" y="64" width="375" height="167"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="dfc-5W-csJ">
                                 <rect key="frame" x="0.0" y="239" width="375" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -315,6 +305,10 @@
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Formuleta" highlightedImage="Formuleta" translatesAutoresizingMaskIntoConstraints="NO" id="b1l-4A-Gnp">
                                 <rect key="frame" x="44" y="360" width="287" height="210"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wPz-qz-UAt">
+                                <rect key="frame" x="0.0" y="64" width="375" height="167"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
