--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -196,6 +196,14 @@
             </objects>
             <point key="canvasLocation" x="968.79999999999995" y="106.59670164917542"/>
         </scene>
+        <!--Game-->
+        <scene sceneID="yYT-Q4-UUJ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Game" id="G0B-1C-XCt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="990-lJ-MMR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2567" y="-401"/>
+        </scene>
         <!--Collection View Controller Two-->
         <scene sceneID="VdN-9Y-UmQ">
             <objects>
@@ -256,6 +264,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yEL-uU-9Q4">
                                 <rect key="frame" x="0.0" y="108" width="375" height="110"/>
                                 <state key="normal" backgroundImage="BannerVermelho3"/>
+                                <connections>
+                                    <segue destination="G0B-1C-XCt" kind="presentation" id="rkl-OM-Os6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
