--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZkT-Tz-LsA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZkT-Tz-LsA">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -100,6 +101,7 @@
                     <navigationItem key="navigationItem" title="Disciplinas" id="Edh-w6-Hft"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="searchBar" destination="iwY-eI-nFI" id="5UV-AN-ctY"/>
                         <outlet property="table" destination="Vmi-MH-jiW" id="p12-wW-pR2"/>
                         <segue destination="xQe-rj-gA1" kind="show" identifier="showFisica" id="dBT-Cc-FBv"/>
                         <segue destination="XJU-UC-aJw" kind="show" identifier="showQuimica" id="Luh-en-yFa"/>
@@ -306,37 +308,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="dfc-5W-csJ">
-                                <rect key="frame" x="0.0" y="261" width="375" height="113"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E0c-CW-xBh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Xg-9r-dVn">
+                                        <rect key="frame" x="-20" y="-20" width="415" height="565"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wPz-qz-UAt">
+                                                <rect key="frame" x="20" y="20" width="375" height="167"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="wPz-qz-UAt" secondAttribute="height" multiplier="375:167" id="CUf-eh-gw0"/>
+                                                    <constraint firstAttribute="width" constant="375" id="fZI-Gn-qny"/>
+                                                    <constraint firstAttribute="height" constant="167" id="wIx-0Z-gNK"/>
+                                                </constraints>
+                                            </imageView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="dfc-5W-csJ">
+                                                <rect key="frame" x="20" y="201" width="375" height="113"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <string key="text">A intensidade da força elétrica de interação entre duas cargas puntiformes é diretamente proporcional ao produto dos módulos das cargas e inversamente proporcional ao quadrado da distância que as separa.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Formuleta" highlightedImage="Formuleta" translatesAutoresizingMaskIntoConstraints="NO" id="b1l-4A-Gnp">
+                                                <rect key="frame" x="64" y="322" width="287" height="223"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="565" id="ZX7-yP-4Eh"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="113" id="7gf-OX-qQT"/>
+                                    <constraint firstItem="6Xg-9r-dVn" firstAttribute="top" secondItem="E0c-CW-xBh" secondAttribute="top" constant="-20" id="6H2-l0-jqj"/>
+                                    <constraint firstItem="6Xg-9r-dVn" firstAttribute="leading" secondItem="E0c-CW-xBh" secondAttribute="leading" constant="-20" id="Bxw-uO-TD9"/>
+                                    <constraint firstAttribute="trailing" secondItem="6Xg-9r-dVn" secondAttribute="trailing" constant="-20" id="U5O-Ub-P5z"/>
+                                    <constraint firstItem="6Xg-9r-dVn" firstAttribute="centerX" secondItem="E0c-CW-xBh" secondAttribute="centerX" id="lOg-xL-xxm"/>
+                                    <constraint firstAttribute="bottom" secondItem="6Xg-9r-dVn" secondAttribute="bottom" constant="9" id="qVb-ER-cDb"/>
                                 </constraints>
-                                <string key="text">A intensidade da força elétrica de interação entre duas cargas puntiformes é diretamente proporcional ao produto dos módulos das cargas e inversamente proporcional ao quadrado da distância que as separa.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Formuleta" highlightedImage="Formuleta" translatesAutoresizingMaskIntoConstraints="NO" id="b1l-4A-Gnp">
-                                <rect key="frame" x="44" y="382" width="287" height="188"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wPz-qz-UAt">
-                                <rect key="frame" x="0.0" y="64" width="375" height="167"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="167" id="wIx-0Z-gNK"/>
-                                </constraints>
-                            </imageView>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dfc-5W-csJ" firstAttribute="top" secondItem="wPz-qz-UAt" secondAttribute="bottom" constant="30" id="3ei-Bw-Tkq"/>
-                            <constraint firstItem="b1l-4A-Gnp" firstAttribute="top" secondItem="dfc-5W-csJ" secondAttribute="bottom" constant="8" symbolic="YES" id="9kL-8N-8eO"/>
-                            <constraint firstAttribute="trailing" secondItem="wPz-qz-UAt" secondAttribute="trailing" id="BLL-a0-7HH"/>
-                            <constraint firstItem="wPz-qz-UAt" firstAttribute="top" secondItem="gAl-gO-xhb" secondAttribute="bottom" id="FdB-hS-YTO"/>
-                            <constraint firstItem="dfc-5W-csJ" firstAttribute="centerX" secondItem="b1l-4A-Gnp" secondAttribute="centerX" id="NKF-dp-IYi"/>
-                            <constraint firstItem="wPz-qz-UAt" firstAttribute="leading" secondItem="dfc-5W-csJ" secondAttribute="leading" id="P24-r0-xbu"/>
-                            <constraint firstItem="wPz-qz-UAt" firstAttribute="leading" secondItem="qF9-yd-yxz" secondAttribute="leading" id="cUD-r0-jSJ"/>
-                            <constraint firstItem="cnj-PV-aYc" firstAttribute="top" secondItem="b1l-4A-Gnp" secondAttribute="bottom" constant="48" id="eh2-BP-Szz"/>
-                            <constraint firstItem="wPz-qz-UAt" firstAttribute="trailing" secondItem="dfc-5W-csJ" secondAttribute="trailing" id="yMn-Ym-DA1"/>
+                            <constraint firstItem="cnj-PV-aYc" firstAttribute="top" secondItem="E0c-CW-xBh" secondAttribute="bottom" id="8WZ-Th-NkI"/>
+                            <constraint firstAttribute="trailing" secondItem="E0c-CW-xBh" secondAttribute="trailing" id="nIK-wT-NMR"/>
+                            <constraint firstItem="E0c-CW-xBh" firstAttribute="top" secondItem="gAl-gO-xhb" secondAttribute="bottom" id="nVO-ag-fNZ"/>
+                            <constraint firstItem="E0c-CW-xBh" firstAttribute="leading" secondItem="qF9-yd-yxz" secondAttribute="leading" id="sQ5-pr-mVR"/>
                         </constraints>
                     </view>
                     <connections>
